[tool.poetry]
name = "vbproblemcomposer"
version = "0.1.3"
description = ""
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"

[tool.poetry.scripts]
vbproblemcomposer = "vbproblemcomposer.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
